moved json modifying to the web